test/fixedbugs/bug318.go
// errorcheck

// Copyright 2011 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Issue 1411.

package main

const ui uint = 0
const i int = ui // ERROR "type"
